# src/controllers/auth.controller.ts
@@ -22,7 +22,27 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+
+        const regex = /^(?=.*[A-Z])/;
+
+        return regex.test(value);
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number", (value) => {
+      if (!value) return false;
+
+      const regex = /^(?=.*\d)/;
+
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password not match"),
@@ -30,6 +50,13 @@ const registerValidateSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+      #swagger.tags = ["AUTH"]
+      #swagger.requestBody = {
+      required: true,
+      schema: {$ref: '#/components/schemas/RegistrationRequest'}
+     }
+     */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
 
@@ -65,6 +92,7 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags = ["AUTH"]
      #swagger.requestBody = {
       required:true,
       schema: {$ref:"#/components/schemas/LoginRequest"}
@@ -83,6 +111,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -126,6 +155,7 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+     #swagger.tags = ["AUTH"]
      #swagger.security = [
       {
         "bearerAuth": []
@@ -140,6 +170,43 @@ export default {
       return res.status(200).json({
         message: "Success get User Profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+
+      res.status(400).json({
+        message: err.message,
+        body: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ["AUTH"]
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: '#/components/schemas/ActivationRequest'}
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+
+      return res.status(200).json({
+        message: "User success activated",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
